--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
 .holder{
-    display:grid;
+    display:flex;
     grid-template-columns: repeat(2, 200px);
     grid-template-rows: repeat(2, 200px);
     row-gap: 10px;
