--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     column-gap: 10px;
     background-color: bisque;
     width: 100vw;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
