--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,15 @@
 /* Your CSS Code here. */
 .holder{
     display:flex;
-    grid-template-columns: repeat(2, 200px);
-    grid-template-rows: repeat(2, 200px);
-    row-gap: 10px;
-    column-gap: 10px;
-    background-color: bisque;
-    width: 100vw;
-    justify-content: space-between;
-    align-items: center;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   column-gap: 15px;
+   row-gap: 15px;
+
 }
 
 .item{
-    background-color: aqua;
-    height: 100px;
+    max-width: 150px;
+    border: 2px solid black;
 }
